--- a/Learning 3-5/Base.lproj/Main.storyboard
+++ b/Learning 3-5/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Register View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Learning_3_5" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RegisterViewController" customModule="Learning_3_5" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -170,6 +170,9 @@
                                             <color key="baseForegroundColor" systemColor="secondarySystemBackgroundColor"/>
                                             <color key="baseBackgroundColor" red="0.45098039220000002" green="0.69019607839999997" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="botaoReceberMaterial:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6qw-ua-4AU"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -214,6 +217,12 @@
                             <constraint firstItem="0DF-bO-Vwd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="wbI-pu-a3E"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="campoAreaAtuacao" destination="0G9-uu-iX1" id="ztB-dm-yui"/>
+                        <outlet property="campoEmail" destination="byl-1X-EUZ" id="Cm8-Fp-N9J"/>
+                        <outlet property="campoNome" destination="Gab-rz-S1p" id="Jl9-5q-dkZ"/>
+                        <outlet property="campoStatusProfissional" destination="4MD-7o-nfr" id="1b8-f5-IBT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
